# mausberry-switch

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.am  README.md  configure.ac  manifest.txt  nfpm.yaml  switch.c
.circleci/: config.yml
.github/workflows/: app.yml
data/: Makefile.am  mausberry-switch.conf  mausberry-switch.init  mausberry-switch.service
debian/: changelog  control  copyright  files  mausberry-switch.init  mausberry-switch.install  rules
doc/: building.md
etc/: Makefile.am  mausberry-switch.conf
init.d/: mausberry
script/: build  build.sh  fpm-deb.sh  lint
src/: CMakeLists.txt  Makefile.am  main.c  maus.c  maus.h  switch.c
tests/: Makefile.am  check_maus  check_maus.c  test1.rb  test_maus  test_maus.c
